# musicremoval

./: .gitignore  ARCHITECTURE.md  GPU Fix.bat  PORT_CONFIG.md  QWEN.md  README.md  TODO.MD  changelog.md  deno.json  kill_ports.bat  log.txt  main.py  metadata_cache.json  module_audio.py  module_ffmpeg.py  module_spleeter.py  module_ytdlp.py  notifications.json  pyproject.toml  requirements.txt  run_app.bat  separate.py  test_truthiness.py  tools.py  video.json
.agent/workflows/: spleeter.md
.agents/workflows/: codebase.md
backend/: __main__.py  backend.py  config.py  main.py  models.py  verify_codecs.py
backend/core/: __init__.py  constants.py  state.py
backend/modules/: module_audio.py  module_cuda.py  module_demucs.py  module_deno.py  module_ffmpeg.py  module_ffmpeg_shared.py  module_file.py  module_processor.py  module_spleeter.py  module_tools.py  module_ytdlp.py
backend/routes/: diagnostics.py  downloads.py  library.py  notifications.py  separation.py
backend/services/: cleanup.py  download_service.py  persistence.py  process_manager.py  (+2 more)
data/: metadata_cache.json  notifications.json  video.json
docs/: ARCHITECTURE.md  FFMPEG - Demucs issue.md  QWEN.md  README.md  TODO.MD  backend_changelog.md  changelog.md  frontend_changelog.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
modules/: module_audio.py  module_cuda.py  module_demucs.py  module_deno.py  module_ffmpeg.py  module_file.py  module_processor.py  module_spleeter.py  module_ytdlp.py
tmp/: check_health.py  test_library.py  test_library_full.py
(+16 files in other folders)
