[project]
name = "demucspleeter"
version = "0.0.3"
description = "AI-powered vocal separation using Demucs and Spleeter with YouTube downloader"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = []

[project.scripts]
demucspleeter = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "spleeter_env",
]
